.opsera-sunny-skies-app/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: opsera-sunny-skies-app-dev
  labels:
    tenant: opsera
    app: sunny-skies-app
    environment: dev
    managed-by: opsera-c2c
