.opsera-sunny-skies-app/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sunny-skies-app
  namespace: opsera-sunny-skies-app-dev
  labels:
    app: sunny-skies-app
    tenant: opsera
    managed-by: opsera-c2c
spec:
  type: ClusterIP
  selector:
    app: sunny-skies-app
  ports:
  - name: http
    port: 80
    targetPort: 8080
    protocol: TCP
